# mcp-crash-course

./: langchain_client.py  main.py  pyproject.toml
servers/: weather_server.py
